[package]
name = "pricy_bot"
version = "0.2.1"
# authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
chrono = "0.4.23"
clap = {version = "4.1.6", features = ["derive"]}
flate2 = "1.0.25"
heck = "0.4.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
rake = "0.3.3"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["json", "gzip", "blocking"]}
robotstxt-with-cache = "0.4.0"
select = "0.6.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
strum = {version = "0.24.1", features = ["derive"]}
tokio = {version = "1.25.0", features = ["rt-multi-thread", "macros"]}
toml = "0.7.2"
url = "2.3.1"
walkdir = "2.3.2"
