[package]
name = "pricy_bot"
version = "0.2.1"
# authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
bytes = "1.4.0"
chrono = "0.4.26"
clap = {version = "4.3.16", features = ["derive"]}
flate2 = "1.0.26"
heck = "0.4.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.1"
reqwest = {version = "0.11.18", features = ["json", "gzip", "blocking"]}
robotstxt-with-cache = "0.4.0"
select = "0.6.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
strum = {version = "0.25.0", features = ["derive"]}
tokio = {version = "1.29.1", features = ["rt-multi-thread", "macros"]}
toml = "0.7.6"
url = "2.4.0"
walkdir = "2.3.3"
